VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc21Up.err
[8MB/2.258GB][  0%][>                                                 ][2.667MB/s]  [48MB/2.258GB][  2%][=>                                                ][12MB/s]  [80MB/2.258GB][  3%][=>                                                ][16MB/s]  [120MB/2.258GB][  5%][==>                                               ][20MB/s]  [160MB/2.258GB][  6%][===>                                              ][22.86MB/s]  [200MB/2.258GB][  8%][====>                                             ][25MB/s]  [240MB/2.258GB][ 10%][=====>                                            ][26.67MB/s]  [280MB/2.258GB][ 12%][======>                                           ][28MB/s]  [320MB/2.258GB][ 13%][======>                                           ][29.09MB/s]  [360MB/2.258GB][ 15%][=======>                                          ][30MB/s]  [408MB/2.258GB][ 17%][========>                                         ][31.38MB/s]  [456MB/2.258GB][ 19%][=========>                                        ][32.57MB/s]  [504MB/2.258GB][ 21%][==========>                                       ][33.6MB/s]  [560MB/2.258GB][ 24%][============>                                     ][35MB/s]  [608MB/2.258GB][ 26%][=============>                                    ][35.76MB/s]  [656MB/2.258GB][ 28%][==============>                                   ][36.44MB/s]  [704MB/2.258GB][ 30%][===============>                                  ][37.05MB/s]  [760MB/2.258GB][ 32%][================>                                 ][38MB/s]  [808MB/2.258GB][ 34%][=================>                                ][38.48MB/s]  [864MB/2.258GB][ 37%][==================>                               ][39.27MB/s]  [912MB/2.258GB][ 39%][===================>                              ][39.65MB/s]  [976MB/2.258GB][ 42%][=====================>                            ][40.67MB/s]  [1.008GB/2.258GB][ 44%][======================>                           ][41.28MB/s]  [1.07GB/2.258GB][ 47%][=======================>                          ][42.15MB/s]  [1.125GB/2.258GB][ 49%][========================>                         ][42.67MB/s]  [1.188GB/2.258GB][ 52%][==========================>                       ][43.43MB/s]  [1.242GB/2.258GB][ 55%][===========================>                      ][43.86MB/s]  [1.305GB/2.258GB][ 57%][============================>                     ][44.53MB/s]  [1.367GB/2.258GB][ 60%][==============================>                   ][45.16MB/s]  [1.422GB/2.258GB][ 62%][===============================>                  ][45.5MB/s]  [1.484GB/2.258GB][ 65%][================================>                 ][46.06MB/s]  [1.539GB/2.258GB][ 68%][==================================>               ][46.35MB/s]  [1.602GB/2.258GB][ 70%][===================================>              ][46.86MB/s]  [1.664GB/2.258GB][ 73%][====================================>             ][47.33MB/s]  [1.719GB/2.258GB][ 76%][======================================>           ][47.57MB/s]  [1.781GB/2.258GB][ 78%][=======================================>          ][48MB/s]  [1.844GB/2.258GB][ 81%][========================================>         ][48.41MB/s]  [1.898GB/2.258GB][ 84%][==========================================>       ][48.6MB/s]  [1.961GB/2.258GB][ 86%][===========================================>      ][48.98MB/s]  [2.023GB/2.258GB][ 89%][============================================>     ][49.33MB/s]  [2.078GB/2.258GB][ 92%][==============================================>   ][49.49MB/s]  [2.141GB/2.258GB][ 94%][===============================================>  ][49.82MB/s]  [2.203GB/2.258GB][ 97%][================================================> ][50.13MB/s]  [2.258GB/2.258GB][ 99%][=================================================>][50.26MB/s]  [2.258GB/2.258GB][100%][==================================================][50.27MB/s]  [2.258GB/2.258GB][100%][==================================================][50.27MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_30507/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_30507/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
